Set example-workflow output type to raw

--- a/.github/workflows/example-workflow.yml
+++ b/.github/workflows/example-workflow.yml
@@ -39,6 +39,7 @@ jobs:
         uses: Shresht7/read-file-action@main
         with:
           path: ./.github/workflows/example-workflow.yml
+          type: raw
 
       # Markdown Slots 📋
       # =================
