Rename type input to parse

--- a/.github/workflows/example-workflow.yml
+++ b/.github/workflows/example-workflow.yml
@@ -13,7 +13,7 @@ on:
     branches:
       - main
     paths:
-      - ./.github/workflows/example-workflow.yml
+      - .github/workflows/example-workflow.yml
 
   # Manual workflow dispatch
   workflow_dispatch:
@@ -39,7 +39,6 @@ jobs:
         uses: Shresht7/read-file-action@main
         with:
           path: ./.github/workflows/example-workflow.yml
-          type: raw
 
       # Markdown Slots 📋
       # =================
@@ -52,7 +51,7 @@ jobs:
             - slot: example
               content: ${{ toJSON(steps.read-file.outputs.contents) }}
           # steps.read-file.outputs.contents is itself a YAML string (example-workflow.yml)
-          # which causes markdown-slots to parse it as a part of content and fail.
+          # which causes markdown-slots action to try and parse it as a part of content and fail.
           # the toJSON function forces the results into a one-line string.
 
       # Push Changes 🌎
