--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -2,7 +2,7 @@
 # TEST ACTION
 # ===========
 
-name: Test-Read-File
+name: Test Read File
 
 # Activation Events
 # =================
@@ -16,7 +16,7 @@ on:
         required: true
         default: ./README.md
 
-      type:
+      parse:
         description: Parse file as `yaml` or `json`
         required: false
 
@@ -41,7 +41,7 @@ jobs:
         uses: ./
         with:
           path: ${{ github.event.inputs.path }}
-          type: ${{ github.event.inputs.type }}
+          parse: ${{ github.event.inputs.parse }}
 
       # Show Output 📱
       # ==============
