Update workflow to point to read-file-action v1

--- a/.github/workflows/example-workflow.yml
+++ b/.github/workflows/example-workflow.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: read-file
         id: read-file
-        uses: Shresht7/read-file-action@main
+        uses: Shresht7/read-file-action@v1
         with:
           path: ./.github/workflows/example-workflow.yml
 
