--- a/.github/workflows/example-workflow.yml
+++ b/.github/workflows/example-workflow.yml
@@ -38,7 +38,7 @@ jobs:
         id: read-file
         uses: Shresht7/read-file-action@v1
         with:
-          path: ./.github/workflows/example-workflow.yml
+          path: .github/workflows/example-workflow.yml
 
       # Markdown Slots 📋
       # =================
