--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A GitHub Action to read a file and export its contents",
   "main": "dist/index.js",
   "scripts": {
-    "build": "ncc build src/index.ts --source-map --license licenses.txt",
+    "dev": "ncc build src/index.ts --source-map --license licenses.txt",
+    "build": "ncc build src/index.ts --license licenses.txt",
     "clean": "npx rimraf dist"
   },
   "repository": {
