--- a/.github/workflows/example-workflow.yml
+++ b/.github/workflows/example-workflow.yml
@@ -17,12 +17,27 @@ on:
 
   # Manual workflow dispatch
   workflow_dispatch:
+    inputs:
+      test:
+        description: Test run
+        required: true
+        default: "false"
+
+      path:
+        description: Path to the file to read
+        required: true
+        default: ./README.md
+
+      parse:
+        description: Parse file as `yaml` or `json`
+        required: false
 
 # Jobs
 # ====
 
 jobs:
   update-readme:
+    if: ${{ github.event.inputs.test != 'true' }}
     runs-on: ubuntu-latest
     steps:
       # Actions Checkout ✅
@@ -74,3 +89,29 @@ jobs:
           git add .
           git commit -m 'Update README.md 📄'
           git push
+
+  echo:
+    if: ${{ github.event.inputs.test == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      # Actions Checkout ✅
+      # ===================
+
+      - name: checkout
+        uses: actions/checkout@v3
+
+      # Read File 📄
+      # ============
+
+      - name: read-file
+        id: read-file
+        uses: ./
+        with:
+          path: ${{ github.event.inputs.path }}
+          parse: ${{ github.event.inputs.parse }}
+
+      # Show Output 📱
+      # ==============
+
+      - name: show output
+        run: echo ${{ steps.read-file.outputs.contents }}
