Stringify echo output

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -44,4 +44,4 @@ jobs:
       # ==============
 
       - name: show output
-        run: echo ${{ steps.read-file.outputs.contents }}
+        run: echo ${{ toJSON(steps.read-file.outputs.contents) }}
